--- a/KJ/ViewControllers/AccidentTimeTableViewCell.xib
+++ b/KJ/ViewControllers/AccidentTimeTableViewCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YHg-e9-ICt">
@@ -47,22 +47,33 @@
                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tM9-Sn-wwZ">
+                        <rect key="frame" x="15" y="0.0" width="290" height="1"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="HCP-oy-JsX"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="YHg-e9-ICt" secondAttribute="bottom" id="A84-Px-Psg"/>
                     <constraint firstItem="YHg-e9-ICt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="BrM-N3-VzV"/>
                     <constraint firstItem="bNt-3S-8xf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Dhm-tY-xox"/>
                     <constraint firstItem="YHg-e9-ICt" firstAttribute="leading" secondItem="SPs-bt-VGj" secondAttribute="trailing" id="GBU-wz-du0"/>
+                    <constraint firstAttribute="trailing" secondItem="tM9-Sn-wwZ" secondAttribute="trailing" constant="15" id="Ic2-C5-xP1"/>
                     <constraint firstAttribute="bottom" secondItem="SPs-bt-VGj" secondAttribute="bottom" id="R1n-16-Wky"/>
                     <constraint firstAttribute="bottom" secondItem="bNt-3S-8xf" secondAttribute="bottom" id="UiC-B0-tJ8"/>
                     <constraint firstItem="SPs-bt-VGj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="YkA-H2-6JR"/>
                     <constraint firstAttribute="trailing" secondItem="YHg-e9-ICt" secondAttribute="trailing" constant="15" id="Zam-uW-UJI"/>
+                    <constraint firstItem="tM9-Sn-wwZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="d88-k8-nli"/>
+                    <constraint firstItem="tM9-Sn-wwZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xQt-pA-DQl"/>
                     <constraint firstItem="bNt-3S-8xf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="z9E-CT-kKx"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="btnTime" destination="SPs-bt-VGj" id="puB-fH-CBR"/>
                 <outlet property="btnTime2" destination="YHg-e9-ICt" id="0nJ-ed-5pk"/>
+                <outlet property="lblLine" destination="tM9-Sn-wwZ" id="FFE-ZI-olY"/>
                 <outlet property="lblTitle" destination="bNt-3S-8xf" id="qfN-i1-sfT"/>
             </connections>
         </tableViewCell>
