--- a/KJ/ViewControllers/DealNameTableViewCell.xib
+++ b/KJ/ViewControllers/DealNameTableViewCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="事故处理人" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J7V-mw-H0w">
@@ -36,17 +36,29 @@
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Te-xj-36h">
+                        <rect key="frame" x="15" y="0.0" width="290" height="1"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="zak-Ge-hTV"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="J7V-mw-H0w" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="1zr-bn-eIb"/>
                     <constraint firstAttribute="bottom" secondItem="J7V-mw-H0w" secondAttribute="bottom" id="3bt-49-9ni"/>
+                    <constraint firstItem="1Te-xj-36h" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Lzq-Ds-kxj"/>
                     <constraint firstItem="TMI-Cq-Qmo" firstAttribute="bottom" secondItem="J7V-mw-H0w" secondAttribute="bottom" id="Vfj-HV-Q4D"/>
                     <constraint firstItem="TMI-Cq-Qmo" firstAttribute="top" secondItem="J7V-mw-H0w" secondAttribute="top" id="caq-aP-HTk"/>
+                    <constraint firstAttribute="trailing" secondItem="1Te-xj-36h" secondAttribute="trailing" constant="15" id="ebZ-qH-0Je"/>
                     <constraint firstAttribute="trailing" secondItem="TMI-Cq-Qmo" secondAttribute="trailing" constant="15" id="fDq-DA-kpN"/>
+                    <constraint firstItem="1Te-xj-36h" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="hEq-ln-IxY"/>
                     <constraint firstItem="J7V-mw-H0w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pFj-7v-wft"/>
                     <constraint firstItem="J7V-mw-H0w" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="srB-7M-8dp"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="lblLine" destination="1Te-xj-36h" id="0z3-Nw-HBh"/>
                 <outlet property="lblTitle" destination="J7V-mw-H0w" id="nFu-XG-nRV"/>
                 <outlet property="txtName" destination="TMI-Cq-Qmo" id="ZdH-cw-ZGf"/>
             </connections>
